--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,9 +29,8 @@
         .row
           .span12
             %ul
-              %li= link_to "Blog", "http://blog.homebrewster.com"
-              %li= link_to "FAQ", faq_path
-              %li= link_to "Meet the Team", team_path
+              %li= link_to "Blog", "#"
+              %li= link_to "FAQ", "#"
 
     :erb
       <!-- begin olark code -->
