--- a/app/views/layouts/_mega_header.html.haml
+++ b/app/views/layouts/_mega_header.html.haml
@@ -1,6 +1,10 @@
 .header
-  = image_tag "field.jpg", class: "header_background"
   .navigation-container
-    %h2 Delicious beer kits sent to your door!
-    %p.lead.muted Every 3 months we will send you the ingredients for a unique and seasonal beer kit.
-    = link_to "Start Brewing Great Beer!", new_user_registration_path, class: "btn btn-danger btn-large"
+    %h2 Build your website quickly, easily, and affordably.
+    = image_tag "device_art.png"
+    .container
+      .row-fluid
+        .span8
+          %p.lead A good, mobile optimized website gives your restaurant the internet presence it needs to bring in more customers.
+        .span4
+          = link_to "Reserve Your Spot!", new_user_registration_path, class: "btn btn-success btn-large"
