--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -17,6 +17,11 @@
             = f.input :first_name, :autofocus => true, input_html: {class: "input-block-level"}
           .span6
             = f.input :last_name, input_html: {class: "input-block-level"}
+
+        .row-fluid
+          .span12
+            = f.input :restaurant_name, input_html: {class: "input-block-level"}
+
         .row-fluid
           .span12
             = f.input :email, :required => true, input_html: {class: "input-block-level"}
