--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -13,13 +13,15 @@
 }
 
 .marketing-container{
-  padding: 50px 0 60px;
+  padding: 70px 0 80px;
 
   h2{
     font-size: 2em;
     line-height: 1;
     margin-bottom: 10px;
     margin-top: 40px;
+    font-weight: normal;
+    color: #2aaf62;
   }
 
   p.info, li{
@@ -85,6 +87,16 @@
   margin-left: -20px;
 }
 
+.call-to-action{
+
+  .btn-large{
+    font-weight: bold;
+    font-size: 1.4em;
+    padding: 20px 40px 23px;
+  }
+
+}
+
 .header{
   background: #ebebeb image-url("mega_header_bg.png") center bottom repeat-x;
 
@@ -106,10 +118,5 @@
       text-align: right;
     }
 
-    .btn-large{
-      font-weight: bold;
-      font-size: 1.4em;
-      padding: 20px 40px 23px;
-    }
   }
 }
