--- a/app/views/layouts/_mega_header.html.haml
+++ b/app/views/layouts/_mega_header.html.haml
@@ -2,7 +2,7 @@
   .navigation-container
     %h2 Build your website quickly, easily, and affordably.
     = image_tag "device_art.png"
-    .container
+    .container.call-to-action
       .row-fluid
         .span8
           %p.lead A good, mobile optimized website gives your restaurant the internet presence it needs to bring in more customers.
