--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -78,6 +78,10 @@ html, body {
     background-color: #fff;
   }
 
+  .site-logo{
+    margin-bottom: 20px;
+  }
+
   .pages-nav{
     margin-top: 28px;
 
