--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -104,7 +104,7 @@
     text-align: center;
     padding: 30px 0;
 
-    h2{
+    h1{
       font-size: 2.5em;
       line-height: 1;
       font-weight: normal;
@@ -112,10 +112,12 @@
 
     img{
       margin: 30px 0px;
+      width: 800px;
+      height: auto;
     }
 
-    p.lead{
-      text-align: right;
+    input{
+      min-height: 10px;
     }
 
   }
