--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,16 +1,1 @@
-= link_to "Home Brewster", current_user ? content_path : root_path, :class => 'site-logo'
-%ul.site-nav.pages-nav
-  - unless current_user
-    %li
-      = nav_link 'Pricing', new_user_registration_path
-  %li
-    = nav_link 'Blog', '#'
-
-  %li
-    = nav_link 'FAQ', "#"
-
-%ul.site-nav.pull-right
-  %li
-    %strong
-      = link_to 'Reserve Your Spot!', new_user_registration_path, class: "btn btn-success btn-eye-catcher"
-
+= link_to "Spork", current_user ? content_path : root_path, :class => 'site-logo'
