--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     #wrap
       .navbar.navbar-fixed-top.navbar-inverse.navbar-space
         %nav.navbar-inner
-          .container
+          .container.text-center
             = render 'layouts/navigation'
 
       - if current_page? root_path
